--- a/index.html
+++ b/index.html
@@ -99,5 +99,27 @@
         <!-- /.main-info -->
     </main>
 </body>
+<footer class="footer">
+    <img class="footer-logo" src="./img/logo-footer.png" alt="Logo: Стандарт Строй">
+    <div class="footer-contacts">
+        <span class="contacts-text">Закажите звонок!</span>
+        <a class="contacts-phone" href="tel: +78431234567">8 (843) 123-45-67</a>
+    </div>
+    <nav class="socials">
+        <ul class="socials-list">
+            <li class="socials-item"><a href="#" class="socials-link socials-link-facebook"></a></li>
+            <li class="socials-item"><a href="#" class="socials-link socials-link-instagram"></a></li>
+            <li class="socials-item"><a href="#" class="socials-link socials-link-twitter"></a></li>
+            <li class="socials-item"><a href="#" class="socials-link socials-link-youtube"></a></li>
+        </ul>
+    </nav>
+    <nav class="about">
+        <ul class="about-list">
+            <li class="about-item"><a href="#" class="about-link">Политика конфиденциальности</a></li>
+            <li class="about-item"><a href="#" class="about-link">Публичная оферта</a></li>
+            <li class="about-item"><a href="#" class="about-link">Контакты</a></li>
+        </ul>
+    </nav>
+</footer>
 
 </html>
