--- a/index.html
+++ b/index.html
@@ -48,13 +48,7 @@
         <div class="main-image">
             <svg class="home-image" width="734" height="640" viewBox="0 0 734 640" fill="none"
                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <rect width="734" height="640" fill="url(#pattern0)" />
-                <defs>
-                    <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
-                        <use xlink:href="#image0" transform="translate(-0.00408719) scale(0.0013624 0.0015625)" />
-                    </pattern>
-                    <image id="image0" width="740" height="640" xlink:href="./img/home.png" />
-                </defs>
+                <image id="image0" width="740" height="640" xlink:href="img/home.png" />
                 <path data-floor='02' d="M223 531L443.8 539L513 525.3V547L444.5 566.7L223 555.7V531Z" fill="#3595F6"
                     fill-opacity="0.75" />
                 <path data-floor='03' d="M224 530V505L444.3 508.3L514 505V525L444.7 538L224 530Z" fill="#3595F6"
@@ -108,27 +102,98 @@
         <!-- /.main-info -->
     </main>
     <footer class="footer">
-        <img class="footer-logo" src="./img/logo-footer.png" alt="Logo: Стандарт Строй">
-        <div class="footer-contacts">
-            <span class="contacts-text">Закажите звонок!</span>
-            <a class="contacts-phone" href="tel: +78431234567">8 (843) 123-45-67</a>
+        <div class="wrapper">
+            <img class="footer-logo" src="./img/logo-footer.png" alt="Logo: Стандарт Строй">
+            <div class="footer-contacts">
+                <span class="contacts-text">Закажите звонок!</span>
+                <a class="contacts-phone" href="tel: +78431234567">8 (843) 123-45-67</a>
+            </div>
+            <nav class="socials">
+                <ul class="socials-list">
+                    <li class="socials-item"><a href="#" class="socials-link socials-link-facebook"></a></li>
+                    <li class="socials-item"><a href="#" class="socials-link socials-link-instagram"></a></li>
+                    <li class="socials-item"><a href="#" class="socials-link socials-link-twitter"></a></li>
+                    <li class="socials-item"><a href="#" class="socials-link socials-link-youtube"></a></li>
+                </ul>
+            </nav>
+            <nav class="about">
+                <ul class="about-list">
+                    <li class="about-item"><a href="#" class="about-link">Политика конфиденциальности</a></li>
+                    <li class="about-item"><a href="#" class="about-link">Публичная оферта</a></li>
+                    <li class="about-item"><a href="#" class="about-link">Контакты</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav class="socials">
-            <ul class="socials-list">
-                <li class="socials-item"><a href="#" class="socials-link socials-link-facebook"></a></li>
-                <li class="socials-item"><a href="#" class="socials-link socials-link-instagram"></a></li>
-                <li class="socials-item"><a href="#" class="socials-link socials-link-twitter"></a></li>
-                <li class="socials-item"><a href="#" class="socials-link socials-link-youtube"></a></li>
-            </ul>
-        </nav>
-        <nav class="about">
-            <ul class="about-list">
-                <li class="about-item"><a href="#" class="about-link">Политика конфиденциальности</a></li>
-                <li class="about-item"><a href="#" class="about-link">Публичная оферта</a></li>
-                <li class="about-item"><a href="#" class="about-link">Контакты</a></li>
-            </ul>
-        </nav>
+        <!-- /.wrapper -->
     </footer>
+    <div class="modal">
+        <div class="modal-dialog">
+            <div class="modal-image">
+                <h3 class="modal-title">Этаж <span class="modal-counter counter">02</span></h3>
+                <svg class='floor-image' width="433" height="408" viewBox="0 0 433 408" fill="none"
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <image id='image0' width='433' heigth='408' xlink:href='img/floor.png' />
+                    <path data-flat='0' d="M388 81V141H314V148H267.5V131H247V32.5H338.5V16H405V81H388Z" fill="#3595F6"
+                        fill-opacity="0.75" />
+                    <path data-flat='1' d="M314 148.5H268V200H367.5V205H387.5V141H314V148.5Z" fill="#3595F6"
+                        fill-opacity="0.75" />
+                    <path data-flat='2' d="M314.192 252.662H268V200H367.916V204.602H388V268H314.192V252.662Z"
+                        fill="#3595F6" fill-opacity="0.75" />
+                    <path data-flat='3' d="M314 253H268.5V309H295.5V376H340V393H405V328.5H388V268.5H314V253Z"
+                        fill="#3595F6" fill-opacity="0.75" />
+                    <path data-flat='4' d="M218 394.5V264H247.5V273.5H267.5V310.5H294.5V375H259.5V394.5H218Z"
+                        fill="#3595F6" fill-opacity="0.75" />
+                    <path data-flat='5' d="M217 394.5V264H187.5V273.5H167.5V310.5H140.5V375H175.5V394.5H217Z"
+                        fill="#3595F6" fill-opacity="0.75" />
+                    <path data-flat='6' d="M121 252H166.5V309H139.5V376H95V393H30V328.5H47V273.5H121V252Z"
+                        fill="#3595F6" fill-opacity="0.75" />
+                    <path data-flat='7' d="M119.5 273.5H46V198H167V250.822H119.5V273.5Z" fill="#3595F6"
+                        fill-opacity="0.75" />
+                    <path data-flat='8' d="M124.729 116H46V198H167V145.178H124.729V116Z" fill="#3595F6"
+                        fill-opacity="0.75" />
+                    <path data-flat='9' d="M46.5 81V115.5H125V144.5H164V131H184.5V32.5H93V16H28V81H46.5Z" fill="#3595F6"
+                        fill-opacity="0.75" />
+                </svg>
+
+            </div>
+            <!-- /.modal-image -->
+            <div class="modal-info">
+                <h3 class="modal-title">Выберите квартиру</h3>
+                <ul class="flat-list">
+                    <li class="flat-item"><a href="#" class="flat-link" data-flat="0">кв. 40, 2 комн. 64,5 кв. м.</a>
+                    </li>
+                    <li class="flat-item"><a href="#" class="flat-link" data-flat="1">кв. 41, 1 комн. 38,9 кв. м.</a>
+                    </li>
+                    <li class="flat-item"><a href="#" class="flat-link" data-flat="2">кв. 42, 1 комн. 35,9 кв. м.</a>
+                    </li>
+                    <li class="flat-item"><a href="#" class="flat-link" data-flat="3">кв. 43, 2 комн. 56,0 кв. м.</a>
+                    </li>
+                    <li class="flat-item"><a href="#" class="flat-link" data-flat="4">кв. 44, 1 комн. 35,8 кв. м.</a>
+                    </li>
+                    <li class="flat-item"><a href="#" class="flat-link" data-flat="5">кв. 45, 1 комн. 35,8 кв. м.</a>
+                    </li>
+                    <li class="flat-item"><a href="#" class="flat-link" data-flat="6">кв. 46, 2 комн. 58,4 кв. м.</a>
+                    </li>
+                    <li class="flat-item"><a href="#" class="flat-link" data-flat="7">кв. 47, 1 комн. 32,2 кв. м.</a>
+                    </li>
+                    <li class="flat-item"><a href="#" class="flat-link" data-flat="8">кв. 48, 1 комн. 29,9 кв. м.</a>
+                    </li>
+                    <li class="flat-item"><a href="#" class="flat-link" data-flat="9">кв. 49, 3 комн. 75,2 кв. м.</a>
+                    </li>
+                </ul>
+                <p class="modal-alert">Квартиры отмеченные серым<br />уже выкуплены</p>
+            </div>
+            <!-- /.modal-info -->
+            <button class="modal-close-button">
+                <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2 2L26 26" stroke="#3596F5" stroke-width="3" />
+                    <path d="M26 2L2 26" stroke="#3596F5" stroke-width="3" />
+                </svg>
+            </button>
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
